--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ pytest==8.2.2
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.1
+httpx==0.27.0
+google-cloud-storage==2.16.0
