--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-fastapi==0.111.0
-uvicorn==0.30.1
-sqlalchemy==2.0.30
+fastapi==0.109.2
+uvicorn==0.27.1
+sqlalchemy==2.0.27
 psycopg2-binary==2.9.9
-pydantic==2.7.4
+pydantic==2.6.1
+google-cloud-storage==2.14.0
 python-multipart==0.0.9
-pandas==2.2.2
+passlib[bcrypt]==1.7.4 # For Password Hashing
 openpyxl==3.1.2
-pytest==8.2.2
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.1
 httpx==0.27.0
-google-cloud-storage==2.16.0
+alembic
+python-dotenv
