--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ psycopg2-binary==2.9.9
 pydantic==2.6.1
 google-cloud-storage==2.14.0
 python-multipart==0.0.9
-passlib[bcrypt]==1.7.4 # For Password Hashing
+passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 openpyxl==3.1.2
 httpx==0.27.0
 alembic
 python-dotenv
+email-validator
