Added unautnticated access for cloud sql

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,6 +21,8 @@ steps:
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
+      - '--add-cloudsql-instances'
+      - '${_INSTANCE_CONNECTION_NAME}'
       - '--set-env-vars'
       - 'DATABASE_URL=${_DATABASE_URL}'
 
