--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'brief-ds-service'
+      - 'breif-ds-group'
       - '--image'
       - 'gcr.io/$PROJECT_ID/brief-ds-backend:$COMMIT_SHA'
       - '--region'
