--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,7 +24,7 @@ steps:
       - '--add-cloudsql-instances'
       - '${_INSTANCE_CONNECTION_NAME}'
       - '--set-env-vars'
-      - 'DATABASE_URL=${_DATABASE_URL}'
+      - 'DATABASE_URL=${_DATABASE_URL},GCS_BUCKET_NAME=mediaflow-bucket'
 
 images:
   - 'gcr.io/$PROJECT_ID/brief-ds-backend:$COMMIT_SHA'
